Implement PrimarySortAlignable directly on query classes per review